--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^1.0.4",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
